--- a/CheapOCSS.css
+++ b/CheapOCSS.css
@@ -1,41 +1,32 @@
-body{
-  background: #410A0F;
-}
-#heading{
-  color: grey;
-  text-align: center;
-  font-size: 30px;
+body
+  {
+    background: #CCFFFF;
+  }
 
-}
-#login-form {
-background-color: grey;
-margin:auto;
-position:relative;
-width:400px;
-height:250px;
-font-family: Tahoma;
-font-size: 13px;
-line-height: 24px;
-font-weight: bold;
-color: black;
-border-radius: 10px;
-padding:10px;
-border: 1px solid #999;
-border: 1px solid #333;
-}
+#head
+  {
+    color: #003399;
+    text-align: center;
+    font-size: 30px;  
+  }
 
-label{
-  font-size: 2em;
-  margin-bottom: 20px;
-  text-align: center;
-}
 
-input    {
-margin-bottom: 10px;
-width:375px;
-display:block;
-border: 1px solid #999;
-height: 25px;
+#loginForm 
+  {
+  background-color: #FFFF66;
+  margin:auto;
+  position:relative;
+  width:400px;
+  height:250px;
+  font-family: Tahoma;
+  font-size: 13px;
+  line-height: 24px;
+  font-weight: bold;
+  color: #600000 ;
+  border-radius: 5px;
+  padding:10px;
+  border: 5px dashed #999;
+  border: 5px dashed #333;
 }
 
 input.button {
@@ -53,6 +44,23 @@ border: 1px solid #999;
 }
 
 input.button:hover {
-background:#fff;
-color:#09C;
+background: #FF00CC;
+color:#CCCC66;
 }
+
+.formField{
+  font-size: 2em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+input    {
+margin-bottom: 10px;
+width:375px;
+display:block;
+border: 1px solid #999;
+height: 25px;
+}
+
+
+
