--- a/msg_box.css
+++ b/msg_box.css
@@ -107,7 +107,7 @@ a{
 
 
 #copyright{
-        background: #003399;
+        background: #B0B0B0;
         text-align: center;
         clear: both;
         color: green;
